Exported components separately, unwrapped. problems solved.

--- a/todolist/src/CSS/ToDoRedux.css
+++ b/todolist/src/CSS/ToDoRedux.css
@@ -71,6 +71,20 @@ Warning {
    }
 
 .deleteButtons {
+     color: white;
+     background-color: #b71c1c;
+     padding: 8px 16px;
+     font-size: 0.875rem;
+     min-width: 64px;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+     min-height: 36px;
+     box-sizing: border-box;
+     line-height: 1.4em;
+     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+     font-weight: 500;
+     border-radius: 4px;
+     border-width: 0px;
+     text-transform: uppercase;
      float: right;
      margin-left: 70px;
    }
